--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "docusign-esign": "^8.3.0",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.511.0",
     "next": "latest",
     "next-themes": "^0.4.6",
